<resources>
    <string name="app_name">MedOne</string>
    <string name="navigation_drawer_open">Open sidebar</string>
    <string name="navigation_drawer_close">Close sidebar</string>
    <string name="nav_header_title">MedOne</string>
    <string name="nav_header_subtitle">Your favourite pharmacy</string>
    <string name="nav_header_desc">MedOne</string>
    <string name="action_settings">Information</string>
    <!--    Sidebar   -->
    <string name="menu_home">Home</string>
    <string name="menu_productos">Products</string>
    <string name="menu_servicios">Services</string>
    <string name="menu_ordenes">Orders</string>
    <string name="menu_acercade">About us</string>
    <string name="homeprincipal">Home - Admin</string>
    <string name="serviciosPrincipal">Services - Admin</string>
    <string name="productosPrincipal">Products - Admin</string>
    <!--    Pantallas de servicio   -->
    <string name="idBtnAddService">Add service</string>
    <string name="idBtnDeleteService">Delete service</string>
    <string name="idEdtServiceName">Service name</string>
    <string name="idEdtServicePrice">Price</string>
    <string name="idTILServiceSuitedFor">Restrictions</string>
    <string name="idTILServiceImageLink">Image link</string>
    <string name="idTILServiceLink">Service link</string>
    <string name="idTILServiceDescription">Description</string>
    <string name="idTILServiceName">Service name</string>
    <string name="idTILServicePrice">Price</string>
    <string name="idEdtServiceImageLink">Image link</string>
    <string name="idBtnUpdateService">Update service</string>
    <!--   Ventanas onclick   -->
    <string name="idTVServiceName">Name service</string>
    <string name="idTVServiceDesc">Description</string>
    <string name="idTVSuitedFor">Restrictions</string>
    <string name="idTVServicePrice">Price</string>
    <string name="idBtnEditService">Edit service</string>
    <string name="idBtnVIewDetails"> Go to link</string>
    <string name="idTVCourseName">Service name</string>
    <string name="idTVCourseDesc">Description</string>
    <string name="idTVCoursePrice">Price</string>
    <string name="idBtnEditCourse">Edit event</string>

    <!--   Pantallas de productos   -->
    <string name="idTILProductName">Product name</string>
    <string name="idTILProductPrice">Price</string>
    <string name="idTILProductSuitedFor">Restriction</string>
    <string name="idTILProductImageLink">Image link</string>
    <string name="idTILProductLink">Product event</string>
    <string name="idTILProductDescription">Description</string>
    <string name="idBtnAddProduct">Add product</string>
    <string name="idBtnDeleteProduct">Delete product</string>
    <string name="idBtnAEditProduct">Edit product</string>


    <!-- Add Home -->
    <string name="idEdtCourseName">Event Name</string>
    <string name="idEdtCoursePrice">Price</string>
    <string name="idEdtSuitedFor">Restrictions</string>
    <string name="idEdtCourseImageLink">Image Link</string>
    <string name="idEdtCourseLink">Event Link</string>
    <string name="idEdtCourseDescription">Description</string>
    <string name="idBtnAddCourse">Add Event</string>

    <!-- Edit Home -->
    <string name="idBtnUpdateCourse">Update \n Event</string>
    <string name="idBtnDeleteCourse">Delete \n Event</string>

    <!-- Fragment_acercade -->
    <string name="tvAcercaParrafo">MedOne was designed to provide an easy alternative when acquiring medical products of your preference including a huge spectrum of medicines and health services to improve your health care.</string>
    <string name="tvAcercaVersion">Version 1.0</string>
    <string name="tvNombreCoto">•	Luis Felipe Coto Arias</string>
    <string name="tvNombreChaves">•	Josué Alexander Chávez García </string>
    <string name="tvNombreDaya">•	Katherine Dayanna Díaz Zúniga </string>
    <string name="tvNombreBryan">•	Bryan Armando Salinas Sánchez </string>
    <string name="tvNombreJosue">•	Josué David Avelar Ponce </string>
    <string name="tvAcercaTeam">Developer team:</string>
    <string name="tvAcercaDerechos">All rights reserved</string>

    <!-- Login -->
    <string name="tvBienvenida">Welcome to MedOne</string>
    <string name="tvTituloLogin">Log in</string>
    <string name="etEmail">Email</string>
    <string name="tvPreguntaCuenta">¿No account?</string>
    <string name="etPassword">Password</string>
    <string name="btnIngresar">Log in</string>
    <string name="btnRegistrarse">Register</string>

    <!-- Register -->
    <string name="tvTituloRegistro">Create an account</string>
    <string name="etEmailR">Email</string>
    <string name="btnVolverR">Go back</string>
    <string name="etPasswordR">Password</string>

    <!-- Activity Add Home -->
    <string name="ExitosoAddHome">The event has been added to home</string>
    <string name="FallidoAddHome">Error while adding to home</string>

    <!-- Activity Add Productos -->
    <string name="ExitosoAddProductos">Product Added</string>
    <string name="FallidoAddProductos">Error while adding to products</string>

    <!-- Activity Add Service -->
    <string name="ExitosoAddServicios">Service Added</string>
    <string name="FallidoAddServicios">Error while adding to services</string>

    <!-- Activity Edit Home -->
    <string name="ExitosoEditHome">Event Updated</string>
    <string name="FallidoEditHome">Error while updating event</string>
    <string name="ExitosoDeleteHome">Event deleted</string>

    <!-- Activity Edit Productos -->
    <string name="ExitosoEditProductos">Product Updated</string>
    <string name="FallidoEditProductos">Error while updating product</string>
    <string name="ExitosoDeleteProductos">Product deleted</string>

    <!-- Activity Edit Servicios -->
    <string name="ExitosoEditServicios">Service Updated</string>
    <string name="FallidoEditServicios">Error while updating service</string>
    <string name="ExitosoDeleteServicios">Service deleted</string>

    <!-- Activity Home principal -->
    <string name="LogOutHomeP">User Logged Out</string>
    <string name="RegresandoMenu">Going to menu...</string>
    <string name="RestriccionesHomeP">Restrictions </string>

    <!-- Activity Login -->
    <string name="WarningEmail">Please enter email...</string>
    <string name="WarningPassword">Please enter password!</string>
    <string name="ExitosoLogin">Login Successful</string>
    <string name="FallidoLogin">Login Failed, Please try again</string>

    <!-- Activity Register -->
    <string name="ExitosoRegister">Registration successful!</string>
    <string name="FallidoRegister">Registration failed! Please try again later</string>

    <!-- menu_main -->
    <string name="LogOutOptionMenu">Log Out</string>
    <string name="GoBackOptionMenu">Test Payment</string>

    <!-- Activity Pago -->
    <string name="BtnPay">Make Payment</string>
    <string name="tvTituloPago">Payment Confirmation</string>
    <string name="tvDescripcionPago">Amount to pay</string>

    <!-- Activity Carrito -->
    <string name="tvPagoDefault">Total: $00.00</string>
    <string name="tvTituloCarrito">Shopping Cart</string>
    <string name="btnComprar">Pay</string>

    <!-- Fragment Productos -->
    <string name="ExitosoAgregarCarrito">Product added to shopping cart</string>








</resources>