<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_sidebar"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_productos_sidebar"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_servicios_sidebar"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_acercade"
            android:icon="@drawable/ic_acercade_sidebar"
            android:title="@string/menu_acercade" />
        <item
            android:id="@+id/homePrincipal"
            android:icon="@drawable/ic_home_sidebar"
            android:title="@string/homeprincipal" />
        <item
            android:id="@+id/serviciosPrincipal"
            android:icon="@drawable/ic_servicios_sidebar"
            android:title="@string/serviciosPrincipal" />
        <item
            android:id="@+id/productosPrincipal"
            android:icon="@drawable/ic_productos_sidebar"
            android:title="Productos - Admin" />
    </group>
</menu>