<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="sv.edu.udb.medone.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="sv.edu.udb.medone.ui.productos.ProductosFragment"
        android:label="@string/menu_productos"
        tools:layout="@layout/fragment_productos" />

    <fragment
        android:id="@+id/nav_servicios"
        android:name="sv.edu.udb.medone.ui.servicios.ServiciosFragment"
        android:label="@string/menu_servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/nav_ordenes"
        android:name="sv.edu.udb.medone.ui.ordenes.OrdenesFragment"
        android:label="@string/menu_ordenes"
        tools:layout="@layout/fragment_ordenes" />
    <fragment
        android:id="@+id/nav_acercade"
        android:name="sv.edu.udb.medone.ui.acercade.AcercadeFragment"
        android:label="fragment_acercade"
        tools:layout="@layout/fragment_acercade" />
    <activity
        android:id="@+id/homePrincipal"
        android:name="sv.edu.udb.medone.HomePrincipal"
        android:label="activity_home_principal"
        tools:layout="@layout/activity_home_principal" />
</navigation>